--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,26 @@ __pycache__/
 *$py.class
 *.so
 .Python
-.venv/
-venv/
-ENV/
-env/
 *.egg-info/
 dist/
 build/
+.venv/
+venv/
+ENV/
+
+# Logs
+*.log
+logs/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
 # Node
 node_modules/
@@ -18,47 +31,26 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .npm-cache/
-package-lock.json
-
-# Logs
-*.log
-logs/
-
-# IDEs
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Data
-data/*.backup
-data/*.tmp
-
-# Build
-build/
-dist/
-
-# Environment
-.env
-.env.local
-.env.production
 
 # React
-/trust-platform-ui/build
-/trust-platform-ui/.npm-cache
+build/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# Test
-coverage/
-.coverage
-htmlcov/
-
-# Temporary files
-*.tmp
+# Backup files
+*.backup
 *.bak
-*~
+*.tmp
 
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Auth
+db.json
+
+# Misc
+.cache/
