--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,33 @@ db.json
 
 # Misc
 .cache/
+
+# Backend (GHCI) specific
+backend/__pycache__/
+backend/**/__pycache__/
+backend/**/*.pyc
+backend/.venv/
+backend/data/*.db
+backend/outputs/
+backend/.DS_Store
+
+# Chatbot specific
+chatbot/__pycache__/
+chatbot/**/__pycache__/
+chatbot/**/*.pyc
+chatbot/.venv/
+chatbot/data/*.db
+chatbot/user_data.db
+chatbot/.DS_Store
+
+# Model files (large)
+*.pkl
+*.h5
+*.pt
+*.pth
+*.onnx
+*.joblib
+
+# Data files (if large)
+*.parquet
+*.feather
